--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         </div>
         <nav  id="nav-menu">
             <ul>
-                <li><a href="#comparison-title">比較表</a></li>
-                <li><a href="#schedule">クラス紹介</a></li>
-                <li><a href="#ticket">料金表</a></li>
-                <li><a href="#interviews">保護者の声</a></li>
-                <li><a href="#faq">よくある質問</a></li>
-                <li><a href="#Form">問い合わせ</a></li>
-                <li><a href="#map">アクセス</a></li>
+                <li><a href="#comparison-title" onclick="closeMenu()">比較表</a></li>
+                <li><a href="#schedule" onclick="closeMenu()">クラス紹介</a></li>
+                <li><a href="#ticket" onclick="closeMenu()">料金表</a></li>
+                <li><a href="#interviews" onclick="closeMenu()">保護者の声</a></li>
+                <li><a href="#faq" onclick="closeMenu()">よくある質問</a></li>
+                <li><a href="#Form" onclick="closeMenu()">問い合わせ</a></li>
+                <li><a href="#map" onclick="closeMenu()">アクセス</a></li>
             </ul>
         </nav>
     </header>
