--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="left-content">
                 <h1>自由なダンスライフを<br>あなたのお子様に～</h1>
                 <p>チケット制通いやすく、インストラクターがサポートします。</p>
-                <button class="cta-button">無料体験レッスン 申し込む</button>
+                <a href="https://lin.ee/CNwql2x"><button class="cta-button">無料体験レッスン 申し込む</button></a>
             </div>
             <div class="right-content">
                 <img src="images/230715_3_180213.jpg" alt="イベント写真">
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 </div>
-                <button class="cta-button">無料体験レッスン 申し込む</button>
+                <a href="https://lin.ee/CNwql2x"><button class="cta-button">無料体験レッスン 申し込む</button></a>
         </section>
 
         <section class="sidebar">
@@ -296,7 +296,7 @@
   <summary>兄弟姉妹で一緒に通う場合、割引はありますか？</summary>
   <p>はい、兄弟姉妹での通学には特別割引を適用しています。詳細はお問い合わせください。</p>
 </details>
-<button class="cta-button">無料体験レッスン 申し込む</button>
+<a href="https://lin.ee/CNwql2x"><button class="cta-button">無料体験レッスン 申し込む</button></a>
 </section>
 <div id="page_top">
   <a href="#"></a>
