--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>株式会社リアクション</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/logo/★Re_Action_kun_1 .png">
     <script src="js/script.js"></script>
 </head>
 <body>
