--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         <div class="logo">
+          <a href="index.html">
             <img src="images/logo/Re_Action_logo_2 .png" alt="Re_Action_logo">
+            </a>
         </div>
         <div class="hamburger-menu" onclick="toggleMenu()">
           <span></span>
@@ -304,7 +306,7 @@
 <div id="page_top">
   <a href="#"></a>
 </div>
-<section class="Form" id="Form">
+<section class="Form" id="Form" >
   <h2 class="contact-title">お問い合わせ</h2>
   <p class="contact-description">お気軽にお問い合わせください。</p>
     <div class="Form-Item">
